[package]
name = "skidscan-macros"
version = "0.1.2"
authors = ["William Venner <william@venner.io>"]
edition = "2024"
license = "MIT"
description = "Proc macros for skidscan"
repository = "https://github.com/WilliamVenner/skidscan"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["parsing", "proc-macro"], default-features = false }
proc-macro-crate = { version = "3.3", default-features = false }

[features]
obfuscate = []
