[package]
name = "skidscan"
version = "2.0.1"
authors = ["William Venner <william@venner.io>"]
edition = "2024"
license = "MIT"
description = "Quick & dirty Rust sigscanning crate"
repository = "https://github.com/WilliamVenner/skidscan"
keywords = ["sigscan", "hacking", "reverse-engineering", "sigscanning", "game-hacking"]

[features]
obfuscate = ["skidscan-macros/obfuscate", "obfstr"]

[dependencies]
skidscan-macros = { path = "../skidscan-macros" }
obfstr = { version = "0.4", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_System_ProcessStatus", "Win32_System_LibraryLoader", "Win32_System_Threading"], default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"